--- a/DayCare/DayCare/Views/Precense/EditPrecenseView.xaml
+++ b/DayCare/DayCare/Views/Precense/EditPrecenseView.xaml
@@ -6,133 +6,131 @@
              xmlns:cal="http://www.caliburnproject.org"
              xmlns:vc="clr-namespace:DayCare.Converters"
              mc:Ignorable="d" >
-  <UserControl.Resources>
-    <ResourceDictionary>
-      <vc:BooleanVisibilityConverter x:Key="BooleanVisibilityConverter" />
-    </ResourceDictionary>
-  </UserControl.Resources>
-  <Grid Width="Auto"  Height="Auto">
-    <Grid.RowDefinitions>
-      <RowDefinition/>
-      <RowDefinition Height="Auto"/>
-    </Grid.RowDefinitions>
+	<UserControl.Resources>
+		<ResourceDictionary>
+			<vc:BooleanVisibilityConverter x:Key="BooleanVisibilityConverter" />
+		</ResourceDictionary>
+	</UserControl.Resources>
+	
+	<Grid Width="Auto"  Height="Auto">
+		<Grid.RowDefinitions>
+			<RowDefinition/>
+			<RowDefinition Height="Auto"/>
+		</Grid.RowDefinitions>
 
-    <Grid>
-      <Grid.RowDefinitions>
-        <RowDefinition/>
-        <RowDefinition Height="Auto"/>
-      </Grid.RowDefinitions>
-      <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="Auto"/>
-        <ColumnDefinition/>
-      </Grid.ColumnDefinitions>
+		<Grid>
+			<Grid.RowDefinitions>
+				<RowDefinition Height="Auto"/>
+				<RowDefinition Height="Auto"/>
+				<RowDefinition Height="Auto"/>
+			</Grid.RowDefinitions>
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="Auto"/>
+				<ColumnDefinition/>
+			</Grid.ColumnDefinitions>
 
-      <Border BorderBrush="Orange" BorderThickness="2" Height="220" Width="166" Margin="20,20" CornerRadius="5" Background="White" HorizontalAlignment="Left" VerticalAlignment="Top" >
-        <Image VerticalAlignment="Center" HorizontalAlignment="Center" Source="{Binding Image}"  Margin="5" Stretch="UniformToFill" />
-      </Border>
+			<Border BorderBrush="Orange" BorderThickness="2" Height="220" Width="166" Margin="20,20,0,0" CornerRadius="5" Background="White" HorizontalAlignment="Left" VerticalAlignment="Top" >
+				<Image VerticalAlignment="Center" HorizontalAlignment="Center" Source="{Binding Image}"  Margin="5" Stretch="UniformToFill" />
+			</Border>
 
-      <Grid Grid.Column="1" Grid.IsSharedSizeScope="True">
-        <Grid.RowDefinitions>
-          <RowDefinition Height="Auto"/>
-          <RowDefinition Height="Auto"/>
-          <RowDefinition Height="Auto"/>
-          <RowDefinition/>
-        </Grid.RowDefinitions>
+			<Grid Grid.Column="1" Grid.IsSharedSizeScope="True" Grid.RowSpan="1" Margin="10,0,0,0">
+				<Grid.RowDefinitions>
+					<RowDefinition Height="Auto"/>
+					<RowDefinition Height="Auto"/>
+					<RowDefinition Height="Auto"/>
+					<RowDefinition/>
+				</Grid.RowDefinitions>
 
-        <Border BorderThickness="0,0,0,2" BorderBrush="Black">
-          <TextBlock Text="{Binding Name}" HorizontalAlignment="Center" Margin="5" Style="{DynamicResource LabelTitleStyle}"/>
-        </Border>
+				<Border BorderThickness="0,0,0,2" BorderBrush="Black">
+					<TextBlock Text="{Binding Name}" HorizontalAlignment="Center" Margin="5" Style="{DynamicResource LabelTitleStyle}"/>
+				</Border>
 
-        <Grid Grid.Row="1" Margin="0,20,0,0">
-          <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-          </Grid.RowDefinitions>
-          <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" SharedSizeGroup="GroupLabel" />
-            <ColumnDefinition Width="10"/>
-            <ColumnDefinition Width="1*"/>
-          </Grid.ColumnDefinitions>
+				<Grid Grid.Row="1" Margin="0,20,0,0" Visibility="{Binding HasArrived, Converter={StaticResource BooleanVisibilityConverter}}">
+					<Grid.RowDefinitions>
+						<RowDefinition Height="Auto"/>
+						<RowDefinition Height="Auto"/>
+					</Grid.RowDefinitions>
+					<Grid.ColumnDefinitions>
+						<ColumnDefinition Width="Auto" SharedSizeGroup="GroupLabel" />
+						<ColumnDefinition Width="10"/>
+						<ColumnDefinition Width="1*"/>
+					</Grid.ColumnDefinitions>
 
-          <TextBlock Text="Aankomst:" Style="{DynamicResource LabelStyle}" />
-          <TextBlock Text="{Binding ArrivalTime}" Grid.Column="2" Style="{DynamicResource LabelStyle}" />
+					<TextBlock Text="Aankomst:" Style="{DynamicResource LabelStyle}" />
+					<TextBlock Text="{Binding BroughtAt}" Grid.Column="2" Style="{DynamicResource LabelStyle}" />
 
-          <TextBlock Text="Gebracht door:" Grid.Row="1" Style="{DynamicResource LabelStyle}" />
-                               <!--Visibility="{Binding Arrived, Converter={StaticResource BooleanVisibilityConverter}}"/>-->
-          <TextBlock Text="{Binding ArrivalMember}" Grid.Row="1" Grid.Column="2" Style="{DynamicResource LabelStyle}" 
-                               Visibility="{Binding Arrived, Converter={StaticResource BooleanVisibilityConverter}}"/>
-        </Grid>
+					<TextBlock Text="Gebracht door:" Grid.Row="1" Style="{DynamicResource LabelStyle}" />
+					<TextBlock Text="{Binding BroughtByName}" Grid.Row="1" Grid.Column="2" Style="{DynamicResource LabelStyle}"/>
+				</Grid>
 
-        <Grid Grid.Row="2" Margin="0,20,0,0" Visibility="{Binding Arrived, Converter={StaticResource BooleanVisibilityConverter}}">
-          <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-          </Grid.RowDefinitions>
-          <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" SharedSizeGroup="GroupLabel"/>
-            <ColumnDefinition Width="10"/>
-            <ColumnDefinition Width="1*"/>
-          </Grid.ColumnDefinitions>
+				<Grid Grid.Row="2" Margin="0,20,0,0" Visibility="{Binding HasLeft, Converter={StaticResource BooleanVisibilityConverter}}">
+					<Grid.RowDefinitions>
+						<RowDefinition Height="Auto"/>
+						<RowDefinition Height="Auto"/>
+					</Grid.RowDefinitions>
+					<Grid.ColumnDefinitions>
+						<ColumnDefinition Width="Auto" SharedSizeGroup="GroupLabel"/>
+						<ColumnDefinition Width="10"/>
+						<ColumnDefinition Width="1*"/>
+					</Grid.ColumnDefinitions>
 
-          <TextBlock Text="Vertrek:" Style="{DynamicResource LabelStyle}" />
-          <TextBlock Text="{Binding LeaveTime}" Grid.Column="2" Style="{DynamicResource LabelStyle}" />
+					<TextBlock Text="Vertrek:" Style="{DynamicResource LabelStyle}" />
+					<TextBlock Text="{Binding TakenAt}" Grid.Column="2" Style="{DynamicResource LabelStyle}" />
 
-          <TextBlock Text="Meegenomen door:" Grid.Row="1" Style="{DynamicResource LabelStyle}" 
-                               Visibility="{Binding Left, Converter={StaticResource BooleanVisibilityConverter}}"/>
-          <TextBlock Text="{Binding LeaveMember}" Grid.Row="1" Grid.Column="2" Style="{DynamicResource LabelStyle}" 
-                               Visibility="{Binding Left, Converter={StaticResource BooleanVisibilityConverter}}"/>
+					<TextBlock Text="Meegenomen door:" Grid.Row="1" Style="{DynamicResource LabelStyle}"/>
+					<TextBlock Text="{Binding TakenByName}" Grid.Row="1" Grid.Column="2" Style="{DynamicResource LabelStyle}" />
+				</Grid>
 
-        </Grid>
-
-        <Grid Grid.Row="3"
-                      Visibility="{Binding ShowSelection, Converter={StaticResource BooleanVisibilityConverter}}">
-          <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition/>
-          </Grid.RowDefinitions>
-
-          <TextBlock Text="Wie ben je?" Style="{DynamicResource LabelStyle}" Margin="5"/>
-          <ScrollViewer Grid.Row="1" Margin="5" MaxHeight="150">
-						
+			</Grid>
+			
+			<!--	Select member	-->
+			<Grid Grid.Row="1" Grid.ColumnSpan="2" Visibility="{Binding ShowSelection, Converter={StaticResource BooleanVisibilityConverter}}">
+				<Grid.RowDefinitions>
+					<RowDefinition Height="Auto"/>
+					<RowDefinition Height="Auto"/>
+				</Grid.RowDefinitions>
 				
-						<ItemsControl ItemsSource="{Binding Resposibles}" >
-            <ItemsControl.ItemsPanel>
-              <ItemsPanelTemplate>
-                <StackPanel />
-              </ItemsPanelTemplate>
-            </ItemsControl.ItemsPanel>
-            <ItemsControl.ItemTemplate>
-              <DataTemplate>
-                <Border BorderBrush="Black" BorderThickness="2" CornerRadius="5" MinHeight="45" Margin="5"
+				<StackPanel Orientation="Horizontal">
+					<TextBlock Margin="2" Text="Gebracht om " Style="{DynamicResource LabelStyle}" Visibility="{Binding NotArrivedYet, Converter={StaticResource BooleanVisibilityConverter}}"/>
+					<TextBlock Margin="2" Text="Meegenomen om " Style="{DynamicResource LabelStyle}" Visibility="{Binding HasArrived, Converter={StaticResource BooleanVisibilityConverter}}" />
+					<TextBlock Margin="2" Text="{Binding CurrentTime, StringFormat=HH:mm}" Style="{DynamicResource LabelStyle}" />
+					<TextBlock Margin="2" Text=" door:" Style="{DynamicResource LabelStyle}" />
+				</StackPanel>
+		
+				<ItemsControl ItemsSource="{Binding Resposibles}" Grid.Row="1">
+					<ItemsControl.ItemsPanel>
+						<ItemsPanelTemplate>
+							<UniformGrid Columns="2" />
+						</ItemsPanelTemplate>
+					</ItemsControl.ItemsPanel>
+					<ItemsControl.ItemTemplate>
+						<DataTemplate>
+							<Border BorderBrush="Black" BorderThickness="2" CornerRadius="5" MinHeight="45" Margin="5"
                                 cal:Message.Attach="[Event MouseUp] = [Action SelectResponsible($this)]">
-                  <TextBlock Text="{Binding .Name}" Margin="25,0" Style="{DynamicResource LabelStyle}" VerticalAlignment="Center" />
+								<TextBlock Text="{Binding .Name}" Margin="25,0" Style="{DynamicResource LabelStyle}" VerticalAlignment="Center" />
 
-                  <Border.Style>
-                    <Style TargetType="Border">
-                      <Setter Property="Background" Value="#FFEE9449" />
-                      <Style.Triggers>
-                        <DataTrigger Binding="{Binding Selected}" Value="True" >
-                          <Setter Property="Background" Value="#FF88D11E" />
-                        </DataTrigger>
-                      </Style.Triggers>
-                    </Style>
-                  </Border.Style>
-                </Border>
-              </DataTemplate>
-            </ItemsControl.ItemTemplate>
+								<Border.Style>
+									<Style TargetType="Border">
+										<Setter Property="Background" Value="#FFEE9449" />
+										<Style.Triggers>
+											<DataTrigger Binding="{Binding Selected}" Value="True" >
+												<Setter Property="Background" Value="#FF88D11E" />
+											</DataTrigger>
+										</Style.Triggers>
+									</Style>
+								</Border.Style>
+							</Border>
+						</DataTemplate>
+					</ItemsControl.ItemTemplate>
 
-          </ItemsControl>
-          </ScrollViewer>
-        </Grid>
-      </Grid>
-
-
-    </Grid>
-    <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center">
-      <Button x:Name="ConfirmAction" Content="Bevestigen" VerticalAlignment="Bottom" Margin="10,5" HorizontalAlignment="Center" Height="30" MinWidth="150" Style="{DynamicResource ButtonStyle}"
+				</ItemsControl>
+			</Grid>
+		</Grid>
+		<StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center">
+			<Button x:Name="ConfirmAction" Content="Bevestigen" VerticalAlignment="Bottom" Margin="10,5" HorizontalAlignment="Center" Height="30" MinWidth="150" Style="{DynamicResource ButtonStyle}"
                     Visibility="{Binding ShowConfirmButton, Converter={StaticResource BooleanVisibilityConverter}}"/>
-      <Button x:Name="CloseAction" Content="Terug" VerticalAlignment="Bottom" Margin="10,5" HorizontalAlignment="Center" Height="30" MinWidth="150" Style="{DynamicResource ButtonStyle}" />
-    </StackPanel >
+			<Button x:Name="CloseAction" Content="Terug" VerticalAlignment="Bottom" Margin="10,5" HorizontalAlignment="Center" Height="30" MinWidth="150" Style="{DynamicResource ButtonStyle}" />
+		</StackPanel >
 
-  </Grid>
+	</Grid>
 </UserControl>
