--- a/DayCare/DayCare/Views/Dashboard/DashBoardView.xaml
+++ b/DayCare/DayCare/Views/Dashboard/DashBoardView.xaml
@@ -75,7 +75,7 @@
 				</Grid>
 			</Border>
 
-			<Border Width="150" Height="200" Margin="25" Visibility="{Binding IsPresenceMode, Converter={StaticResource InverseBooleanVisibilityConverter}}">
+			<Border Width="150" Height="200" Margin="25">
 				<Grid>
 					<Grid.RowDefinitions>
 						<RowDefinition Height="1*"/>
