--- a/DayCare/DayCare/Views/Expenses/ExpenseDetailView.xaml
+++ b/DayCare/DayCare/Views/Expenses/ExpenseDetailView.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="600">
+             d:DesignHeight="500" d:DesignWidth="600">
 	<Grid>
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="206"/>
@@ -16,11 +16,13 @@
 		</Grid.RowDefinitions>
 
 		<Border BorderBrush="Orange" BorderThickness="2" Height="220" Width="166" Margin="20,20" CornerRadius="5" Background="White" HorizontalAlignment="Left" VerticalAlignment="Top" >
-			<Image VerticalAlignment="Center" HorizontalAlignment="Center" Source="/DayCare;component/Resources/olaf.png"  Margin="5" Stretch="UniformToFill" />
+			<Image VerticalAlignment="Center" HorizontalAlignment="Center" Source="{Binding Image}"  Margin="5" Stretch="UniformToFill" />
 		</Border>
 
 		<Grid MinWidth="200" Grid.Column="1">
 			<Grid.RowDefinitions>
+				<RowDefinition Height="Auto"/>
+				<RowDefinition Height="Auto"/>
 				<RowDefinition Height="Auto"/>
 				<RowDefinition Height="Auto"/>
 				<RowDefinition Height="Auto"/>
@@ -38,23 +40,36 @@
 				<TextBlock Text="{Binding Name}" HorizontalAlignment="Center" Margin="5" Style="{DynamicResource LabelTitleStyle}"/>
 			</Border>
 
-			<TextBlock Grid.Row="1" Text="Eten" Style="{DynamicResource LabelStyle}" />
-			<TextBlock Grid.Row="2" Text="Pampers" Style="{DynamicResource LabelStyle}" />
-			<TextBlock Grid.Row="3" Text="Medicatie" Style="{DynamicResource LabelStyle}" />
-			<TextBlock Grid.Row="4" Text="Aanwezigheid" Style="{DynamicResource LabelStyle}" />
-
-			<CheckBox Grid.Row="1" Grid.Column="2" VerticalAlignment="Center"  />
+			<TextBlock Grid.Row="1" Text="Extra maaltijd" Style="{DynamicResource LabelStyle}" />
+			<CheckBox Grid.Row="1" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center" />
+			
+			<TextBlock Grid.Row="2" Text="Extra Uren" Style="{DynamicResource LabelStyle}" />
 			<StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="2" VerticalAlignment="Center">
-				<Button Content="-" Margin="5" />
-				<TextBlock Grid.Row="2" Text="0" Style="{DynamicResource LabelStyle}" />
-				<Button Content="+" Margin="5" />
+				<Button Name="DecrementHoursAction" Content="-" Margin="5" Style="{DynamicResource ButtonStyle}" MinWidth="30" FontSize="22" FontWeight="ExtraBold" />
+				<TextBlock Grid.Row="2" Text="{Binding Hours}" Style="{DynamicResource LabelStyle}" MinWidth="50" TextAlignment="Center"/>
+				<Button Name="IncrementHoursAction" Content="+" Margin="5" Style="{DynamicResource ButtonStyle}" MinWidth="30" FontSize="22" FontWeight="ExtraBold" />
 			</StackPanel>
-			<StackPanel Orientation="Horizontal" Grid.Row="3" Grid.Column="2" VerticalAlignment="Center">
-				<Button Content="-" Margin="5" />
-				<TextBlock Grid.Row="2" Text="0" Style="{DynamicResource LabelStyle}" />
-				<Button Content="+" Margin="5" />
+
+			<TextBlock Grid.Row="3" Text="Te laat" Style="{DynamicResource LabelStyle}" />
+			<CheckBox Grid.Row="3" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+
+			<TextBlock Grid.Row="4" Text="Pampers" Style="{DynamicResource LabelStyle}" />
+			<StackPanel Orientation="Horizontal" Grid.Row="4" Grid.Column="2" VerticalAlignment="Center">
+				<Button Name="DecrementDiapersAction" Content="-" Margin="5" Style="{DynamicResource ButtonStyle}" MinWidth="30" FontSize="22" FontWeight="ExtraBold" />
+				<TextBlock Grid.Row="2" Text="{Binding Diapers}" Style="{DynamicResource LabelStyle}" MinWidth="50" TextAlignment="Center"/>
+				<Button Name="IncrementDiapersAction" Content="+" Margin="5" Style="{DynamicResource ButtonStyle}" MinWidth="30" FontSize="22" FontWeight="ExtraBold" />
 			</StackPanel>
-			<CheckBox Grid.Row="4" Grid.Column="2" VerticalAlignment="Center" />
+			
+			<TextBlock Grid.Row="5" Text="Medicatie" Style="{DynamicResource LabelStyle}" />
+			<StackPanel Orientation="Horizontal" Grid.Row="5" Grid.Column="2" VerticalAlignment="Center">
+				<Button Name="DecrementMedicationAction" Content="-" Margin="5" Style="{DynamicResource ButtonStyle}" MinWidth="30" FontSize="22" FontWeight="ExtraBold" />
+				<TextBlock Grid.Row="2" Text="{Binding Medication}" Style="{DynamicResource LabelStyle}" MinWidth="50" TextAlignment="Center"/>
+				<Button Name="IncrementMedicationAction" Content="+" Margin="5" Style="{DynamicResource ButtonStyle}" MinWidth="30" FontSize="22" FontWeight="ExtraBold" />
+			</StackPanel>
+			
+			<TextBlock Grid.Row="6" Text="Ziek" Style="{DynamicResource LabelStyle}" />
+			<CheckBox Grid.Row="6" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+
 
 		</Grid>
 
