--- a/DayCare/DayCare/Views/Expenses/ExpenseMainView.xaml
+++ b/DayCare/DayCare/Views/Expenses/ExpenseMainView.xaml
@@ -4,11 +4,67 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 						 xmlns:cal="http://www.caliburnproject.org"
-						 xmlns:vc="clr-namespace:DayCare.Converters"
+             xmlns:vc="clr-namespace:DayCare.Converters"
+						 xmlns:bh="clr-namespace:DayCare.Behaviour"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
+	<UserControl.Resources>
+		<ResourceDictionary>
+			<vc:BooleanVisibilityConverter x:Key="BooleanVisibilityConverter" />
+		</ResourceDictionary>
+	</UserControl.Resources>
 	<Grid>
-		<Border Margin="10" >
+		<Grid.RowDefinitions>
+			<RowDefinition Height="Auto"/>
+			<RowDefinition/>
+		</Grid.RowDefinitions>
+
+		<StackPanel Margin="10,5" Orientation="Horizontal" HorizontalAlignment="Left">
+			<Button x:Name="EditExpenseAction" Content="Toevoegen" Margin="5,0" MinWidth="150" Height="30" Style="{DynamicResource ButtonStyle}" />
+		</StackPanel>
+
+		<ScrollViewer Grid.Row="1" Margin="2">
+			<ItemsControl ItemsSource="{Binding Items}" >
+				<ItemsControl.ItemsPanel>
+					<ItemsPanelTemplate>
+						<StackPanel />
+					</ItemsPanelTemplate>
+				</ItemsControl.ItemsPanel>
+				<ItemsControl.ItemTemplate>
+					<DataTemplate>
+						<Border BorderBrush="Black" BorderThickness="2" CornerRadius="5" MinHeight="75" Margin="5,10"
+										cal:Message.Attach="[Event MouseUp] = [Action SelectItem($this)]"
+										bh:DoubleClickEvent.AttachAction="EditExpenseAction($this)" >
+							<Grid>
+								<Grid.ColumnDefinitions>
+									<ColumnDefinition />
+									<ColumnDefinition />
+								</Grid.ColumnDefinitions>
+
+								<TextBlock Text="{Binding .Name}" Margin="25,0" Style="{DynamicResource LabelStyle}" VerticalAlignment="Center" />
+								<Border Grid.Column="1" HorizontalAlignment="Right" BorderBrush="Black" Background="White" BorderThickness="1" CornerRadius="2"	Margin="2"
+												Visibility="{Binding ShowImage, Converter={StaticResource BooleanVisibilityConverter}}">
+									<Image Source="{Binding ImageData}" Height="75" />
+								</Border>
+							</Grid>
+
+							<Border.Style>
+								<Style TargetType="Border">
+									<Setter Property="Background" Value="#FFEE9449" />
+									<Style.Triggers>
+										<DataTrigger Binding="{Binding Selected}" Value="True" >
+											<Setter Property="Background" Value="#FF88D11E" />
+										</DataTrigger>
+									</Style.Triggers>
+								</Style>
+							</Border.Style>
+						</Border>
+					</DataTemplate>
+				</ItemsControl.ItemTemplate>
+			</ItemsControl>
+		</ScrollViewer>
+
+		<!--<Border Margin="10" >
 			<ScrollViewer>
 				<ItemsControl ItemsSource="{Binding Expenses}">
 					<ItemsControl.ItemsPanel>
@@ -20,7 +76,9 @@
 						<DataTemplate>
 							<Grid Height="220" Width="166" Margin="10">
 
-								<!--<Border Width="Auto" Height="Auto" Margin="10,10,0,0" CornerRadius="5" Background="#266C6C6C"/>-->
+								-->
+		<!--<Border Width="Auto" Height="Auto" Margin="10,10,0,0" CornerRadius="5" Background="#266C6C6C"/>-->
+		<!--
 								<Border BorderBrush="Orange" BorderThickness="2" Width="Auto" Height="Auto" Margin="5" CornerRadius="5" Background="{Binding BackGround}"
 												cal:Message.Attach="[Event MouseUp] = [Action SelectChildAction($this)]">
 									<Grid>
@@ -29,8 +87,10 @@
 											<RowDefinition Height="40"/>
 										</Grid.RowDefinitions>
 										<Image VerticalAlignment="Center" HorizontalAlignment="Center" Source="{Binding ImageData}" Margin="5"/>
-										<!--<Image Source="/DayCare;component/Resources/close.png" HorizontalAlignment="Right" VerticalAlignment="Top" Height="56" Margin="0" Width="51"
+										-->
+		<!--<Image Source="/DayCare;component/Resources/close.png" HorizontalAlignment="Right" VerticalAlignment="Top" Height="56" Margin="0" Width="51"
 																				 Visibility="{Binding ToLate, Converter={StaticResource BooleanVisibilityConverter}}"/>-->
+		<!--
 										<Viewbox Grid.Row="1" Margin="0">
 											<TextBlock Text="{Binding Tag.FirstName}" Style="{DynamicResource LabelStyle}" Height="41" Width="Auto" />
 										</Viewbox>
@@ -42,6 +102,6 @@
 
 				</ItemsControl>
 			</ScrollViewer>
-		</Border>
+		</Border>-->
 	</Grid>
 </UserControl>
